# project-university

./: .gitignore  CMakeLists.txt  Makefile  README.md  ValgrindError.txt  build_debug.sh  build_project.sh  build_release.sh  configure_debug.sh  configure_release.sh  run_tests.sh  testing.txt  text.txt  text1.txt  valgrind_output.txt
.github/workflows/: test.yml
include/: BOW.hpp  BowVectorizer.hpp  CSV.hpp  CameraDTO.hpp  Clique.hpp  CustomVector.hpp  DatasetsFunc.hpp  FastVector.hpp  FileSystem.hpp  HashMap.hpp  Iterative.hpp  JSON.hpp  JSONParsing.hpp  JobScheduler.hpp  List.hpp  Logistic.hpp  Metrics.hpp  Pairs.hpp  Queue.hpp  Set.hpp  Sort.hpp  TextProcessing.hpp  TfIdfVectorizer.hpp  Types.hpp  Utils.hpp  Vectorizer.hpp
src/: BowVectorizer.cpp  CSV.cpp  CameraDTO.cpp  Clique.cpp  DatasetsFunc.cpp  FileSystem.cpp  Iterative.cpp  JSON.cpp  JSONParsing.cpp  JobScheduler.cpp  Logistic.cpp  Metrics.cpp  Pairs.cpp  Set.cpp  Sort.cpp  TextProcessing.cpp  TfIdfVectorizer.cpp  Utils.cpp  Vectorizer.cpp  main.cpp
test/: CMakeLists-gtest.txt  CMakeLists.txt  FastVector.cpp  csv.cpp  customvector.cpp  filesystem.cpp  hashmap.cpp  json.cpp  list.cpp  set.cpp  test.cpp  test.csv  textprocessing.cpp  utils.cpp  vectorizer.cpp
test/someId/: test.json
